--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,23 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "source": "/css/(.*)",
+      "destination": "/PortfolioApp/wwwroot/css/$1"
+    },
+    {
+      "source": "/js/(.*)",
+      "destination": "/PortfolioApp/wwwroot/js/$1"
+    },
+    {
+      "source": "/images/(.*)",
+      "destination": "/PortfolioApp/wwwroot/images/$1"
     }
   ],
-  "routes": [
-    {
-      "src": "/css/(.*)",
-      "dest": "/PortfolioApp/wwwroot/css/$1"
-    },
-    {
-      "src": "/js/(.*)",
-      "dest": "/PortfolioApp/wwwroot/js/$1"
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "/PortfolioApp/wwwroot/images/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/(.*\\.(css|js|jpg|jpeg|png|gif|svg|webp|ico))",
       "headers": [
         {
           "key": "Cache-Control",
@@ -38,7 +26,7 @@
       ]
     },
     {
-      "source": "/index.html",
+      "source": "/(.*\\.html)",
       "headers": [
         {
           "key": "Cache-Control",
