--- a/vercel.json
+++ b/vercel.json
@@ -17,20 +17,28 @@
   "trailingSlash": false,
   "headers": [
     {
-      "source": "/(.*\\.(css|js|jpg|jpeg|png|gif|svg|webp|ico))",
+      "source": "/(.*)",
       "headers": [
         {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
         }
       ]
     },
     {
-      "source": "/(.*\\.html)",
+      "source": "/PortfolioApp/wwwroot/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
